# tilepeek

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
data/: com.tilepeek.TilePeek.desktop  com.tilepeek.TilePeek.metainfo.xml  com.tilepeek.TilePeek.mime.xml
packaging/: README.md  build-macos.sh  build-rpm.sh  tilepeek.spec
packaging/assets/: dmg-background.tiff
reference/: MVT-v2.1.md
resources/graphics/: graphics.qrc
resources/icons/: icons.qrc
resources/macos/: Info.plist.in
resources/text/: text.qrc
src/: CMakeLists.txt  main.cpp  version.h.in
src/app/: AboutDialog.cpp  MainWindow.cpp  MainWindow.h
src/map/: MapViewport.cpp  MapViewport.h  RasterTileProvider.cpp  RasterTileProvider.h  TileCache.cpp  TileCache.h  TileProvider.h  TileSource.h  UnclippedTileResult.h  VectorTileProvider.cpp  VectorTileProvider.h  VectorTileRenderer.cpp  VectorTileRenderer.h  WebMercator.cpp  WebMercator.h
src/mbtiles/: MBTilesMetadataParser.cpp  MBTilesMetadataParser.h  MBTilesReader.cpp  MBTilesReader.h  VectorMetadataParser.cpp  VectorMetadataParser.h
src/model/: TileStatistics.h  TilesetMetadata.cpp  TilesetMetadata.h
src/mvt/: FeatureHitTest.cpp  FeatureHitTest.h  MvtDecoder.cpp  MvtDecoder.h  MvtGeometry.cpp  MvtGeometry.h  MvtTypes.h  ProtobufDecoder.cpp  ProtobufDecoder.h
src/pmtiles/: PMTilesMetadataParser.cpp  PMTilesMetadataParser.h  PMTilesReader.cpp  PMTilesReader.h
src/stats/: TileStatsWorker.cpp  TileStatsWorker.h
src/util/: CetColormap.h  FormatUtils.cpp  FormatUtils.h  GzipUtils.cpp  GzipUtils.h  TileCoords.cpp  TileCoords.h
src/widgets/: EmptyStateWidget.cpp  EmptyStateWidget.h  MetadataSidebar.cpp  MetadataSidebar.h  ToastManager.cpp  ToastManager.h  ToastWidget.cpp  ToastWidget.h
tests/: CMakeLists.txt  tst_FeatureHitTest.cpp  tst_FormatUtils.cpp  tst_GzipUtils.cpp  tst_MBTilesMetadataParser.cpp  tst_MBTilesReader.cpp  tst_MvtDecoder.cpp  tst_MvtGeometry.cpp  tst_PMTilesReader.cpp  tst_ProtobufDecoder.cpp  tst_TileCache.cpp  tst_TileCoords.cpp  tst_TilesetMetadata.cpp  tst_VectorMetadataParser.cpp  tst_WebMercator.cpp
